Fixed author_img cropping

--- a/css/style.css
+++ b/css/style.css
@@ -85,5 +85,19 @@ h2 {
 }
 
 .author-img{
+    position: absolute;
+    width: 110%;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.author-img-container{
+    padding-bottom:100%;
+    width:100%;
+    overflow:hidden;
+    position:relative;
     border: 5px solid var(--bg-color);
 }
